--- a/app/templates/components/battle-frame.hbs
+++ b/app/templates/components/battle-frame.hbs
@@ -8,11 +8,11 @@
       {{battle-dice info=die}}
     {{/each}}
   </div>
+  <div class="battlefooter">
+    {{battle-player-info}}
+  </div>
 </div>
 <div class="battlespellbook">
   {{spell-school-picker}}
-  This is the spellbook
-</div>
-<div class="battlefooter">
-  {{battle-player-info}}
+  {{battle-spellbook}}
 </div>
