--- a/app/templates/components/spell-school-picker.hbs
+++ b/app/templates/components/spell-school-picker.hbs
@@ -1,29 +1,30 @@
 <div class="spell-picker-container">
-  <button class="neutral">
+  <button class="neutral" {{action "setPickedSchool" "neutral"}}>
     Neutral
   </button>
-  <button class="rotate270 life">
+  <button class="rotate270 life" {{action "setPickedSchool" "life"}}>
     Life
   </button>
-  <button class="rotate315 bard">
+  <button class="rotate315 bard" {{action "setPickedSchool" "bard"}}>
     Bardic
   </button>
-  <button class="rotate0 illusion">
+  <button class="rotate0 illusion" {{action "setPickedSchool" "illusion"}}>
     Illusion
   </button>
-  <button class="rotate45 sorcery">
+  <button class="rotate45 sorcery" {{action "setPickedSchool" "sorcery"}}>
     Sorcery
   </button>
-  <button class="rotate90 death">
+  <button class="rotate90 death" {{action "setPickedSchool" "death"}}>
     Death
   </button>
-  <button class="rotate135 summon">
+  <button class="rotate135 summon" {{action "setPickedSchool" "summon"}}>
     Summon
   </button>
-  <button class="rotate180 phys">
+  <button class="rotate180 phys" {{action "setPickedSchool" "phys"}}>
     Physical
   </button>
-  <button class="rotate225 druid">
+  <button class="rotate225 druid" {{action "setPickedSchool" "druid"}}>
     Druidic
   </button>
 </div>
+<div style="height: 4em; border-bottom: 1px solid;"/>
