--- a/app/templates/components/battle-spellbook.hbs
+++ b/app/templates/components/battle-spellbook.hbs
@@ -1,4 +1,4 @@
-<strong>{{prettifySchool game.chosenSchool}}</strong> Spellbook
+<strong>{{prettifySchool chosenSchool}}</strong> Spellbook
 {{#each spellList as |spell|}}
   {{battle-spell spell=spell}}
 {{/each}}
