Checkpoint commit; disable cast button when insufficient mana

--- a/app/templates/components/battle-spell.hbs
+++ b/app/templates/components/battle-spell.hbs
@@ -6,4 +6,4 @@ Cost:
 {{/if}}
 </div>
 <br/>
-<button {{action "castSpell"}}>Cast</button>
+<button {{action "castSpell"}} disabled={{cantCast}}>Cast</button>
