--- a/app/templates/components/battle-player-info.hbs
+++ b/app/templates/components/battle-player-info.hbs
@@ -1,26 +1,27 @@
 <div style="margin:15px">
+  {{player}} Stats:
   <div class="player-health">
     Health<br/>
-    {{game.player_life}}
+    {{health}}
   </div>
 </div>
 <div style="margin:15px">
   <div class="mana-icon neutral"/>
-  {{game.player_mana.neutral}}
+  {{mana.neutral}}
 </div>
 <div style="margin:15px">
   <div class="mana-icon life"/>
-  {{game.player_mana.life}}
+  {{mana.life}}
 </div>
 <div style="margin:15px">
   <div class="mana-icon phys"/>
-  {{game.player_mana.phys}}
+  {{mana.phys}}
 </div>
 <div style="margin:15px">
   <div class="mana-icon illusion"/>
-  {{game.player_mana.illusion}}
+  {{mana.illusion}}
 </div>
 <div style="margin:15px">
   <div class="mana-icon death"/>
-  {{game.player_mana.death}}
+  {{mana.death}}
 </div>
