Checkpoint commit; refactor spell listing into its own service

--- a/app/templates/components/battle-spellbook.hbs
+++ b/app/templates/components/battle-spellbook.hbs
@@ -2,3 +2,8 @@
 {{#each spellList as |spell|}}
   {{battle-spell spell=spell}}
 {{/each}}
+{{#if noKnownSpells}}
+  <div>
+    You do not know any {{prettifySchool chosenSchool}} spells...
+  </div>
+{{/if}}
