--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -47,13 +47,14 @@
   text-align: center;
 }
 
-.dice {
+.creature {
   border-radius: 50%;
-	width: 50px;
-	height: 50px;
+	width: 2.5em;
+	height: 2.5em;
   text-align: center;
   vertical-align: middle;
   display: table-cell;
+  background: #3355ee;
 }
 
 .player-health {
