Checkpoint commit; Added modal to summarize dice roll effects to player

--- a/app/templates/components/battle-frame.hbs
+++ b/app/templates/components/battle-frame.hbs
@@ -1,3 +1,6 @@
+{{#if showDiceInfoModal}}
+  {{diceroll-info-popover diceMessages=game.diceMessages}}
+{{/if}}
 <div class="battleframe">
   <h3>This is the Battle Frame</h3>
   <div>
