Checkpoint commit; Added working creature combat logic

--- a/app/templates/components/battle-frame.hbs
+++ b/app/templates/components/battle-frame.hbs
@@ -12,6 +12,9 @@
   <button {{action 'rollDice'}}>
     ROLL ALL THE DICE!
   </button>
+  <button {{action 'doBattle'}}>
+    DO COMBAT!
+  </button>
   <div>
     {{battle-player-creatures creatures=game.player_creatures}}
   </div>
