--- a/app/templates/components/diceroll-info-popover.hbs
+++ b/app/templates/components/diceroll-info-popover.hbs
@@ -1,4 +1,4 @@
-{{#bs-modal closeAction="clearDiceInfo" backdrop=false}}
+{{#bs-modal closeAction="clearDiceInfo" title="Dice Roll Recap" backdrop=false}}
   {{#each diceMessages as |message|}}
     <p>{{message}}</p>
   {{/each}}
