Checkpoint commit; Added turn structure to battles

--- a/app/templates/components/battle-player-info.hbs
+++ b/app/templates/components/battle-player-info.hbs
@@ -25,3 +25,8 @@
   <div class="mana-icon death"/>
   {{mana.death}}
 </div>
+{{#if playerInfo}}
+<div style="margin:15px">
+  <button class="btn {{doneButtonClass}}" {{action "finishCastPhase"}}>Done Casting</button>
+</div>
+{{/if}}
