--- a/app/templates/components/battle-frame.hbs
+++ b/app/templates/components/battle-frame.hbs
@@ -1,8 +1,20 @@
+{{#if showNewTurn}}
+  {{#bs-modal closeAction="rollDice" title=beginningTurnText backdrop=false}}
+  {{/bs-modal}}
+{{/if}}
 {{#if showDiceInfoModal}}
   {{diceroll-info-popover diceMessages=game.diceMessages}}
 {{/if}}
 {{#if showCombatRecapModal}}
   {{combat-info-popover combatMessages=game.combatMessages}}
+{{/if}}
+{{#if showManaLeftWarning}}
+  {{#bs-modal body=false footer=false closeAction="clearManaWarning" submitAction="doBattle" title="Are you sure?" backdrop=false}}
+    {{#bs-modal-body}}
+      <p>You still have mana remaining to cast spells, and only neutral mana can be carried foward to the next turn</p>
+    {{/bs-modal-body}}
+    {{bs-modal-footer closeTitle="Go Back" submitTitle="Continue"}}
+  {{/bs-modal}}
 {{/if}}
 <div class="battleframe">
   <h3>This is the Battle Frame</h3>
@@ -12,17 +24,16 @@
   <div>
     {{battle-player-creatures creatures=game.opponent_creatures}}
   </div>
-  <button {{action 'rollDice'}}>
-    ROLL ALL THE DICE!
-  </button>
-  <button {{action 'doBattle'}}>
-    DO COMBAT!
-  </button>
+  <div>
+    <p>Opponent's creatures</p>
+    <div style="border: 1px dashed"/>
+    <p>Your creatures</p>
+  </div>
   <div>
     {{battle-player-creatures creatures=game.player_creatures}}
   </div>
   <div class="battlefooter">
-    {{battle-player-info player="Your" health=game.player_life mana=game.player_mana}}
+    {{battle-player-info player="Your" health=game.player_life mana=game.player_mana playerInfo=true}}
   </div>
 </div>
 <div class="battlespellbook">
