Checkpoint commit; Added game end trigger & skeleton store page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,4 @@
-<h2 id="title">Welcome to Ember</h2>
+<h2 id="title">Welcome to Embers of Knowledge game!</h2>
 
 {{battle-frame}}
-
-{{outlet}}
+{{store-frame}}
