Add spell picker to store

--- a/app/templates/components/store-frame.hbs
+++ b/app/templates/components/store-frame.hbs
@@ -1,8 +1,17 @@
 {{#if doingShopping}}
-  <h2>OMG A SHOP!</h2>
-  <p>Your money: {{player.player_money}}</p>
-  {{#each player.player_dice as |dice|}}
-    {{store-dice dice=dice}}
-  {{/each}}
+
+  <div style="">
+    Your money: {{player.player_money}}
+  </div>
+  <div class="battleflexbox">
+    <div class="battleframe">
+      {{#each player.player_dice as |dice|}}
+        {{store-dice dice=dice}}
+      {{/each}}
+    </div>
+    <div class="battlespellbook">
+      {{spell-school-picker chooseSpell=(action "setStoreSchool")}}
+    </div>
+  </div>
   <button class="btn btn-default" {{action "gotoBattle"}}>Done Shopping</button>
 {{/if}}
