More action up refactor, castSpell this time

--- a/app/templates/components/battle-frame.hbs
+++ b/app/templates/components/battle-frame.hbs
@@ -43,5 +43,5 @@
 </div>
 <div class="battlespellbook">
   {{spell-school-picker chooseSpell=(action "setChosenSchool")}}
-  {{battle-spellbook chosenSchool=chosenSpellSchool}}
+  {{battle-spellbook chosenSchool=chosenSpellSchool castSpell=(action "castSpell")}}
 </div>
