--- a/app/templates/components/battle-spell.hbs
+++ b/app/templates/components/battle-spell.hbs
@@ -18,4 +18,4 @@ Cost:
 {{/if}}
 </div>
 <br/>
-<button class="btn btn-default" {{action "castSpell"}} disabled={{cantCast}}>Cast</button>
+<button class="btn btn-default" {{action castSpell spell}} disabled={{cantCast}}>Cast</button>
