--- a/app/templates/components/battle-player-info.hbs
+++ b/app/templates/components/battle-player-info.hbs
@@ -27,6 +27,6 @@
 </div>
 {{#if playerInfo}}
 <div style="margin:15px">
-  <button class="btn {{doneButtonClass}}" {{action "finishCastPhase"}}>Done Casting</button>
+  <button class="btn {{doneButtonClass}}" {{action finishCastPhase}}>Done Casting</button>
 </div>
 {{/if}}
