Added spell buying framework to store

--- a/app/templates/components/battle-spell.hbs
+++ b/app/templates/components/battle-spell.hbs
@@ -18,4 +18,8 @@ Cost:
 {{/if}}
 </div>
 <br/>
-<button class="btn btn-default" {{action castSpell spell}} disabled={{cantCast}}>Cast</button>
+{{#if inStore}}
+  <button class="btn btn-default" {{action buySpell spell}} disabled={{cantAfford}}>Buy for {{spell.buyCost}}</button>
+{{else}}
+  <button class="btn btn-default" {{action castSpell spell}} disabled={{cantCast}}>Cast</button>
+{{/if}}
