--- a/app/templates/components/battle-spellbook.hbs
+++ b/app/templates/components/battle-spellbook.hbs
@@ -1,6 +1,6 @@
 <strong>{{prettify-school chosenSchool}}</strong> Spellbook
 {{#each spellList as |spell|}}
-  {{battle-spell spell=spell castSpell=(action castSpell)}}
+  {{battle-spell spell=spell inStore=false castSpell=(action castSpell)}}
 {{/each}}
 {{#if noKnownSpells}}
   <div>
