--- a/app/templates/components/battle-spell.hbs
+++ b/app/templates/components/battle-spell.hbs
@@ -1,3 +1,6 @@
+<span class="badge badge-pill badge-secondary">?
+  {{bs-tooltip title=spell.description placement='left'}}
+</span>
 <strong>{{spell.name}}</strong><br/>
 Cost:
 <div class="spell-cost-container">
