--- a/app/templates/components/store-spellbook.hbs
+++ b/app/templates/components/store-spellbook.hbs
@@ -1,4 +1,4 @@
-<strong>{{prettify-school chosenSchool}}</strong> Spellbook
+<strong>{{prettify-school chosenSchool}}</strong> Learnable Spells
 {{#each spellList as |spell|}}
   {{battle-spell spell=spell inStore=true buySpell=(action buySpell)}}
 {{/each}}
