--- a/app/templates/components/combat-info-popover.hbs
+++ b/app/templates/components/combat-info-popover.hbs
@@ -1,4 +1,4 @@
-{{#bs-modal-simple onHide=clearCombatInfo title="Creature Combat Recap" backdrop=false}}
+{{#bs-modal-simple onHide=clearCombatInfo title="Creature Combat Recap" backdrop=false closeTitle="Start new turn"}}
   {{#each combatMessages as |message|}}
     <p>{{message}}</p>
   {{/each}}
