--- a/app/templates/components/spell-school-picker.hbs
+++ b/app/templates/components/spell-school-picker.hbs
@@ -1,29 +1,29 @@
 <div class="spell-picker-container">
-  <button class="neutral" {{action chooseSpell "neutral"}}>
+  <button class="btn neutral" {{action chooseSpell "neutral"}}>
     Neutral
   </button>
-  <button class="rotate270 life" {{action chooseSpell "life"}}>
+  <button class="btn rotate270 life" {{action chooseSpell "life"}}>
     Life
   </button>
-  <button class="rotate315 bard" {{action chooseSpell "bard"}}>
+  <button class="btn rotate315 bard" {{action chooseSpell "bard"}}>
     Bardic
   </button>
-  <button class="rotate0 illusion" {{action chooseSpell "illusion"}}>
+  <button class="btn rotate0 illusion" {{action chooseSpell "illusion"}}>
     Illusion
   </button>
-  <button class="rotate45 sorcery" {{action chooseSpell "sorcery"}}>
+  <button class="btn rotate45 sorcery" {{action chooseSpell "sorcery"}}>
     Sorcery
   </button>
-  <button class="rotate90 death" {{action chooseSpell "death"}}>
+  <button class="btn rotate90 death" {{action chooseSpell "death"}}>
     Death
   </button>
-  <button class="rotate135 summon" {{action chooseSpell "summon"}}>
+  <button class="btn rotate135 summon" {{action chooseSpell "summon"}}>
     Summon
   </button>
-  <button class="rotate180 phys" {{action chooseSpell "phys"}}>
+  <button class="btn rotate180 phys" {{action chooseSpell "phys"}}>
     Physical
   </button>
-  <button class="rotate225 druid" {{action chooseSpell "druid"}}>
+  <button class="btn rotate225 druid" {{action chooseSpell "druid"}}>
     Druidic
   </button>
 </div>
