--- a/app/templates/components/diceroll-info-popover.hbs
+++ b/app/templates/components/diceroll-info-popover.hbs
@@ -1,4 +1,4 @@
-{{#bs-modal-simple onHide=clearDiceInfo title="Dice Roll Recap" backdrop=false}}
+{{#bs-modal-simple onHide=clearDiceInfo title="Dice Roll Recap" backdrop=false closeTitle="Time to spellcast!"}}
   {{#each diceMessages as |message|}}
     <p>{{message}}</p>
   {{/each}}
